--- a/en/integrations/mercadolibre.mdx
+++ b/en/integrations/mercadolibre.mdx
@@ -1,7 +1,7 @@
 ---
 title: Mercado Libre
 description: 'Integrate ZenFlow with Mercado Libre for automated order fulfillment'
-icon: 'store'
+icon: '/mercadolibre-logo.png'
 ---
 
 # Mercado Libre Integration
