--- a/en/integrations/tiendanube.mdx
+++ b/en/integrations/tiendanube.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tiendanube
 description: 'Integrate ZenFlow with Tiendanube for seamless e-commerce fulfillment'
-icon: 'cloud'
+icon: '/tiendanube-logo.png'
 ---
 
 # Tiendanube Integration
