--- a/es/integrations/mercadolibre.mdx
+++ b/es/integrations/mercadolibre.mdx
@@ -1,7 +1,7 @@
 ---
 title: Mercado Libre
 description: 'Integra ZenFlow con Mercado Libre para fulfillment automatizado'
-icon: 'store'
+icon: '/mercadolibre-logo.png'
 ---
 
 # Integracion con Mercado Libre
