--- a/es/integrations/tiendanube.mdx
+++ b/es/integrations/tiendanube.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tiendanube
 description: 'Integra ZenFlow con Tiendanube para fulfillment de e-commerce'
-icon: 'cloud'
+icon: '/tiendanube-logo.png'
 ---
 
 # Integracion con Tiendanube
